fix overflow issue with scroll

--- a/src/app/chat-screen/chat-screen.component.scss
+++ b/src/app/chat-screen/chat-screen.component.scss
@@ -1,6 +1,7 @@
 :host {
   flex: 1;
   padding: 3rem 6rem;
+  overflow: auto;
 
   ul {
     list-style: none;
